sass/main.sass
@import 'normolize'
@import 'var'
@import 'fonts'
@import 'extends'
@import 'componentes'
@import 'reboot'
@import 'header'

.hero
	position: relative
	z-index: 1
	padding: 0 0 var(--section-spacing)
	.container
		position: relative
		border: 1px solid var(--white-fade)

	&__img
		width: 100%
		// transform: scaleX(-1)

	&__content
		gap: 20px
		@extend %flex-col
		position: absolute
		top: 50%
		right: 0
		width: 65%
		transform: translateY(-50%)
		padding: 20px 40px 20px 0

	h1
		@extend %font-h1
		font-weight: normal
		margin: 0

	&__text
		text-wrap: balance
		max-width: 450px
		@extend %font-lg
		margin: 0 auto
		@media screen and ( min-width: 993px )
			min-width: 420px

		b
			text-transform: uppercase

	@media screen and ( max-width: 700px )
		&__img
			min-height: 170px

		&__content
			width: 68%
			gap: 10px
			padding: 10px 15px 10px 0

		&__text
			font-size: 14px

	@media screen and ( max-width: 540px )
		h1
			font-size: 5.7vw

		.hero__text
			font-size: 2.7vw
			margin: 0 0 0 auto

	@media screen and ( max-width: 480px )
		&__content
			width: 70%

.services
	h2
		text-align: center
		margin-bottom: 10px

	&__descr
		text-align: center
		margin: 0 0 40px

	&__wrap
		@extend %cols
		--col: 2

	&__item
		gap: 20px
		@extend %flex-col
		padding: 46px 40px
		border: 1px solid var(--white-fade)
		background-color: rgba(0, 0, 0, .3)
		backdrop-filter: blur(1px)
		p
			color: var(--gray)

	h3
		text-wrap: balance

	@media screen and ( max-width: 800px )
		&__item
			padding: 37px 30px

	@media screen and ( max-width: 700px )
		&__descr
			margin-bottom: 20px

		&__wrap
			--col: 1
			--gap: 10px

		&__item
			gap: 10px
			padding: 20px 15px

.contacts
	text-align: center
	margin-bottom: var(--section-spacing)

	h2
		@extend %font-h2
		margin: 0 0 30px

	&__card
		// border-radius: 20px
		padding: 0
		list-style: none
		max-width: 620px
		margin: 0 auto
		padding: 46px 40px
		border: 1px solid var(--white-fade)
		@extend %flex-col
		align-items: center
		gap: 28px
		background-color: rgba(0, 0, 0, 0.18)

		@media screen and (max-width: 700px)
			padding: 32px 18px

	&__list
		color: var(--gray-light)
		display: table

		li
			text-align: left
			display: table-row

			@extend %font-md
		span
			padding: 5px 0
			text-align: right
			display: table-cell
			color: var(--white)
		a
			padding-left: 10px
			display: table-cell
			color: inherit
			text-decoration: none

	&__btn
		display: inline-flex
		align-items: center
		justify-content: center
		min-height: 58px
		padding: 0 42px
		border: 1px solid var(--white-fade)
		background-color: rgba(0, 0, 0, 0.3)
		color: var(--white)
		@extend %font-sm

@import 'footer'

